@@ -6,8 +6,10 @@ int parseDescription(Spec spec);
 int parseFiles(Spec spec);
 int parsePreamble(Spec spec, int initialPackage);
 int parsePrep(Spec spec);
-int parseRequiresConflicts(Spec spec, Package pkg, char *field, int tag);
+int parseRequiresConflicts(Spec spec, Package pkg, char *field,
+			   int tag, int index);
 int parseProvidesObsoletes(Spec spec, Package pkg, char *field, int tag);
+int parseTrigger(Spec spec, Package pkg, char *field, int tag);
 int parseScript(Spec spec, int parsePart);
 int parseBuildInstallClean(Spec spec, int parsePart);
 
